--- a/_config.yml
+++ b/_config.yml
@@ -6,17 +6,17 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: I am Chuan !
-name: DONGChuan
-email: dongchuan55@gmail.com
-location: Nice, France
-company: Gfi Informatique
-company_url: http://www.gfi.fr/en/
-github_url: https://github.com/DONGChuan
-description: This is personnel website of DONG Chuan
+title: I am Zhao Yang!
+name: Zhao Yang
+email: cnrgc@163.com / sxzhaoyang@gmail.com
+location: Beijing, P.R.China
+company: FEITIAN Technologies
+company_url: https://www.ftsafe.com/
+github_url: https://github.com/youngbug
+description: This is Zhao Yang's homepage
 favicon: favicon.png # Image must be in assets/images
 
-url: http://dongchuan.github.io # the base hostname & protocol for your site
+url: http://youngbug.github.io # the base hostname & protocol for your site
 
 ## Gem
 gems:
