--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,8 @@
 # Site settings
 title: Welcome Zhao Yang's homepage!
 name: Zhao Yang
-email: cnrgc@163.com / sxzhaoyang@gmail.com
+email1: cnrgc@163.com 
+email2: sxzhaoyang@gmail.com
 location: Beijing, P.R.China
 company: FEITIAN Technologies
 company_url: https://www.ftsafe.com/
