--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,11 @@ location: Beijing, P.R.China
 company: FEITIAN Technologies
 company_url: https://www.ftsafe.com/
 github_url: https://github.com/youngbug
+csdn_page: https://blog.csdne.net/youngbug
+juejin_page: https://juejin.cn/user/3334166892253240
+weibo: https://weibo.com/u/1649423232
+weibo_name: 詹天佐
+telegram: youngbug
 description: This is Zhao Yang's homepage
 favicon: youngbug.gif # Image must be in assets/images
 
