--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Welcome Zhao Yang's homepage!
+title: Zhao Yang's homepage!
 name: Zhao Yang
 email1: cnrgc@163.com 
 email2: sxzhaoyang@gmail.com
