--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,8 @@ favicon: youngbug.gif # Image must be in assets/images
 
 url: http://youngbug.github.io # the base hostname & protocol for your site
 
+##issue评论
+comments: true
 ## Gem
 gems:
   - jekyll-paginate
