--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ name: Zhao Yang
 email1: cnrgc@163.com 
 email2: sxzhaoyang@gmail.com
 location: Beijing, P.R.China
-company: FEITIAN Technologies
-company_url: https://www.ftsafe.com/
+company: Intelligent and Connected Vehicle Device of China(Chengdu) Technology Co.,Ltd
+company_url: https://www.cicvd.com/
 github_url: https://github.com/youngbug
-csdn_page: https://blog.csdne.net/youngbug
+csdn_page: https://blog.csdn.net/youngbug
 juejin_page: https://juejin.cn/user/3334166892253240
 weibo: https://weibo.com/u/1649423232
 weibo_name: 詹天佐
