--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ name: Zhao Yang
 email1: cnrgc@163.com 
 email2: sxzhaoyang@gmail.com
 location: Beijing, P.R.China
-company: Intelligent and Connected Vehicle Device of China(Chengdu) Technology Co.,Ltd
+company: CICVD Technology
 company_url: https://www.cicvd.com/
 github_url: https://github.com/youngbug
 csdn_page: https://blog.csdn.net/youngbug
